--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -36,10 +36,21 @@ jobs:
           sudo npm install -g firebase-tools
           firebase use zksync-vue --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}
       
-      - name: Deploy to staging site
-        if: github.ref == 'refs/heads/dev'
-        run: firebase deploy --only hosting:live --non-interactive --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }} -m "RunID ${{ github.run_id }} Commit SHA ${{ github.sha }}"
-
       - name: Deploy to rinkeby site
         if: github.ref == 'refs/heads/rinkeby'
-        run: firebase deploy --only hosting:zksync-vue-rinkeby-2 --non-interactive --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }} -m "RunID ${{ github.run_id }} Commit SHA ${{ github.sha }}"
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
+          channelId: zksync-vue-rinkeby-2
+          projectId: zksync-vue
+        env:
+          FIREBASE_CLI_PREVIEWS: hostingchannels
+
+      # - name: Deploy to staging site
+      #   if: github.ref == 'refs/heads/dev'
+      #   run: firebase deploy --only hosting:live --non-interactive --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }} -m "RunID ${{ github.run_id }} Commit SHA ${{ github.sha }}"
+
+      # - name: Deploy to rinkeby site
+      #   if: github.ref == 'refs/heads/rinkeby'
+      #   run: firebase deploy --only hosting:zksync-vue-rinkeby-2 --non-interactive --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }} -m "RunID ${{ github.run_id }} Commit SHA ${{ github.sha }}"
