--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -31,10 +31,10 @@ jobs:
       - name: Build
         run: yarn generate --fail-on-error
 
-      - name: Install firebase tools
-        run: |
-          sudo npm install -g firebase-tools
-          firebase use zksync-vue --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}
+      # - name: Install firebase tools
+      #   run: |
+      #     sudo npm install -g firebase-tools
+      #     firebase use zksync-vue --token ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}
       
       - name: Deploy to rinkeby site
         if: github.ref == 'refs/heads/rinkeby'
