--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -44,6 +44,7 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
           target: zksync-vue-rinkeby-2
           projectId: zksync-vue
+          channelID: live
         # env:
         #   FIREBASE_CLI_PREVIEWS: hostingchannels
 
