--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           # repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
-          target: stage
+          target: zksync-vue-rinkeby-2
           projectId: zksync-vue
           channelID: live
         # env:
