--- a/firebase.json
+++ b/firebase.json
@@ -15,5 +15,13 @@
       "**/.*",
       "**/node_modules/**"
     ]
+  }, {
+    "target": "ropsten",
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }]
 }
