--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -40,11 +40,29 @@ jobs:
         if: github.ref == 'refs/heads/rinkeby'
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          # repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
           target: rinkeby
           projectId: zksync-vue
           channelID: live
+
+      - name: Deploy to ropsten site
+        if: github.ref == 'refs/heads/ropsten'
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
+          target: ropsten
+          projectId: zksync-vue
+          channelID: live
+
+      - name: Deploy to stage site
+        if: github.ref == 'refs/heads/dev'
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
+          target: stage
+          projectId: zksync-vue
+          channelID: live
+
         # env:
         #   FIREBASE_CLI_PREVIEWS: hostingchannels
 
