master for all testnets

--- a/.github/workflows/firebase-hosting-pr.yml
+++ b/.github/workflows/firebase-hosting-pr.yml
@@ -3,9 +3,9 @@
 
 name: Deploy to Firebase Hosting on merge
 'on':
-  push:
+  pull_request:
     branches:
-      - dev
+      - master
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -19,14 +19,30 @@ jobs:
         if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/rinkeby'
         run: sh ./cli-process-env.sh rinkeby
 
-      - name: Build
+      - name: Build rinkeby
         run: yarn generate --fail-on-error
-
-      - name: Deploy to stage site
-        if: github.ref == 'refs/heads/dev'
+      
+      - name: Deploy to rinkeby site
+        if: github.ref == 'refs/heads/rinkeby'
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
-          target: stage
+          target: rinkeby
+          projectId: zksync-vue
+          channelID: live
+
+      - name: Configure for ropsten
+        if: github.ref == 'refs/heads/ropsten'
+        run: sh ./cli-process-env.sh ropsten
+
+      - name: Build ropsten
+        run: yarn generate --fail-on-error
+
+      - name: Deploy to ropsten site
+        if: github.ref == 'refs/heads/ropsten'
+        uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
+          target: ropsten
           projectId: zksync-vue
           channelID: live
