no conditional branches

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,14 +16,14 @@ jobs:
         run: yarn ci
 
       - name: Configure for rinkeby
-        if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/rinkeby'
+        # if: github.ref == 'refs/heads/dev'
         run: sh ./cli-process-env.sh rinkeby
 
       - name: Build
         run: yarn generate --fail-on-error
 
       - name: Deploy to stage site
-        if: github.ref == 'refs/heads/dev'
+        # if: github.ref == 'refs/heads/dev'
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
