--- a/firebase.json
+++ b/firebase.json
@@ -23,5 +23,13 @@
       "**/.*",
       "**/node_modules/**"
     ]
+  }, {
+    "target": "mainnet",
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }]
 }
