refactor: auto-profiling with manual fixes * auto-profiling with fixes done

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "latest",
     "@nuxtjs/google-gtag": "^1.0.4",
-    "@nuxtjs/pwa": "latest",
+    "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/sentry": "^4.5.0",
     "@nuxtjs/toast": "latest",
     "@types/js-cookie": "^2.2.6",
@@ -69,7 +69,7 @@
     "lodash": "4.17.20",
     "node-sass": "latest",
     "prettier": "^2.2.1",
-    "sass-loader": "latest",
+    "sass-loader": "^10.1.1",
     "stylelint": "^13.8.0",
     "ts-jest": "^26.4.4",
     "vue-jest": "^3.0.7",
