--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nuxtjs/axios": "latest",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/pwa": "^3.3.5",
-    "@nuxtjs/sentry": "^4.5.0",
+    "@nuxtjs/sentry": "^5.0.0",
     "@nuxtjs/toast": "latest",
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.167",
@@ -39,6 +39,7 @@
     "nuxt-i18n": "^6.8.1",
     "nuxt-webfontloader": "^1.1.0",
     "qrcode": "^1.0.0",
+    "surge": "^0.21.7",
     "vue": "^2.6.12",
     "vue-qrcode": "^0.3.5",
     "vue-recaptcha": "^1.3.0",
@@ -62,9 +63,9 @@
     "dotenv": "8.2.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier-vue": "^2.1.1",
     "eslint-plugin-vue": "^7.0.0",
+    "fork-ts-checker-webpack-plugin": "^6.1.0",
     "jest": "^26.6.3",
     "lodash": "4.17.20",
     "node-sass": "latest",
@@ -76,7 +77,7 @@
     "webpack": "^5.11.1"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "@nuxtjs/eslint-config"
   },
   "homepage": "https://wallet.zksync.io",
   "husky": {
@@ -180,5 +181,5 @@
       "scss/at-rule-no-unknown": true
     }
   },
-  "version": "2.0.3"
+  "version": "2.1.0-beta"
 }
