--- a/package.json
+++ b/package.json
@@ -100,15 +100,15 @@
   },
   "private": true,
   "scripts": {
-    "ci": "rm -fr node_modules && rm -rf 'public/*' && sh ./cli-check-env.sh && yarn install --frozen-lockfile",
-    "ci:build": "yarn ci && sh ./cli-process-env.sh \"$NETWORK\" && yarn generate --fail-on-error",
+    "ci": "rm -fr node_modules && rm -rf 'public/*' && sh ./cli-check-env.sh && yarn install --immutable  --immutable-cache",
+    "ci:build": "yarn run ci && sh ./cli-process-env.sh \"$NETWORK\" && yarn generate --fail-on-error",
     "start:firebase": "firebase serve --only hosting",
     "deploy:prod": "./cli-deploy-production.sh",
     "dev": "sh ./cli-check-env.sh && nuxt",
-    "prepare_ci": "yarn ci && sh cli-process-env.sh 'rinkeby'",
+    "prepare_ci": "yarn run ci && sh cli-process-env.sh 'rinkeby'",
     "start": "sh ./cli-check-env.sh && nuxt start",
     "build": "sh ./cli-check-env.sh && nuxt build",
-    "build:stage": "yarn ci && sh cli-process-env.sh 'rinkeby' && yarn generate --fail-on-error",
+    "build:stage": "yarn run ci && sh cli-process-env.sh 'rinkeby' && yarn generate --fail-on-error",
     "generate": "nuxt generate",
     "test": "echo \"Not implemented.\"",
     "format": "prettier --write",
