added deploy to mainnet
(cherry picked from commit 2567513cd25363f3a0d47007bff29d2241599214)

--- a/.github/workflows/firebase-hosting-push-master.yml
+++ b/.github/workflows/firebase-hosting-push-master.yml
@@ -42,3 +42,17 @@ jobs:
           target: ropsten
           projectId: zksync-vue
           channelID: live
+
+      - name: Configure for mainnet
+        run: sh ./cli-process-env.sh mainnet
+
+      - name: Build mainnet
+        run: yarn generate --fail-on-error
+
+      - name: Deploy to mainnet
+        uses: matter-labs/action-hosting-deploy@v0
+        with:
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE_MAINNET }}'
+          target: mainnet
+          projectId: zksync-vue-mainnet
+          channelID: live
