perf(update): on-going update
Updated UI, refactored couple of TS-files

--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     ]
   },
   "optionalDependencies": {
-    "@sentry/webpack-plugin": "^1.14.0",
-    "fs-extra": "^9.0.1"
+    "@sentry/webpack-plugin": "^1.14.2",
+    "fs-extra": "^9.1.0"
   },
   "scripts": {
     "ci": "rm -fr node_modules && rm -rf 'public/*' && yarn install --frozen-lockfile",
@@ -104,65 +104,68 @@
     }
   },
   "dependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/runtime": "^7.12.5",
-    "@ethersproject/logger": "^5.0.8",
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/runtime": "^7.13.10",
+    "@ethersproject/logger": "^5.1.0",
     "@matterlabs/zk-wallet-onboarding": "^1.18.6",
-    "@nuxtjs/axios": "latest",
+    "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/pwa": "^3.3.5",
-    "@nuxtjs/sentry": "^5.0.0",
-    "@nuxtjs/toast": "latest",
-    "@types/lodash": "^4.14.167",
+    "@nuxtjs/sentry": "^5.0.3",
+    "@nuxtjs/toast": "^3.3.1",
+    "@types/lodash": "^4.14.168",
     "@walletconnect/web3-provider": "^1.3.1",
     "ethereum-blockies-base64": "^1.0.2",
-    "ethers": "^5.0.12",
+    "ethers": "^5.1.0",
     "js-cookie": "^2.2.1",
-    "lottie-web": "^5.7.5",
+    "lottie-web": "^5.7.7",
     "moment": "^2.29.1",
-    "nuxt": "^2.14.12",
-    "nuxt-i18n": "^6.8.1",
+    "nuxt": "^2.15.3",
+    "nuxt-i18n": "^6.22.3",
     "nuxt-webfontloader": "^1.1.0",
-    "qrcode": "^1.0.0",
-    "surge": "^0.21.7",
+    "qrcode": "^1.4.4",
     "vue": "^2.6.12",
     "vue-property-decorator": "^9.1.2",
     "vue-qrcode": "^0.3.5",
-    "vue-recaptcha": "^1.3.0",
-    "vue-scrollto": "^2.17.1",
+    "vue-scrollto": "^2.20.0",
     "walletlink": "^2.0.2",
-    "web3": "^1.3.1",
-    "zksync": "^0.8.4"
+    "web3": "^1.3.4",
+    "zksync": "^0.10.8"
   },
   "devDependencies": {
-    "@inkline/nuxt": "^2.3.5",
-    "@nuxt/types": "^2.14.12",
-    "@nuxt/typescript-build": "^2.0.3",
+    "@inkline/nuxt": "^2.3.6",
+    "@nuxt/types": "^2.15.3",
+    "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/dotenv": "1.4.1",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/style-resources": "^1.0.0",
     "@rsksmart/mock-web3-provider": "^0.0.1",
+    "@synthetixio/synpress": "^0.7.18",
     "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "^7.0.0-bridge.0",
-    "commitlint": "^11.0.0",
-    "cypress": "^6.4.0",
+    "commitlint": "^12.0.1",
+    "cypress": "^6.8.0",
+    "cypress-nuxt": "^1.3.1",
+    "cypress-vue-unit-test": "^3.5.1",
     "dotenv": "8.2.0",
     "enzyme": "^3.11.0",
     "eslint": "^7.23.0",
-    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-prettier": "latest",
     "eslint-plugin-prettier-vue": "^2.1.1",
-    "eslint-plugin-vue": "^7.0.0",
-    "fork-ts-checker-webpack-plugin": "^6.1.0",
+    "eslint-plugin-vue": "^7.8.0",
+    "fork-ts-checker-webpack-plugin": "^6.2.0",
     "jest": "^26.6.3",
-    "lodash": "4.17.20",
+    "lodash": "4.17.21",
     "node-sass": "latest",
+    "postcss": "8.2.9",
+    "postcss-loader": "4.2.0",
     "prettier": "^2.2.1",
-    "sass-loader": "^10.1.1",
     "stylelint": "^13.12.0",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended": "^4.0.0",
@@ -170,11 +173,13 @@
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0",
     "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
     "vue-class-component": "^7.2.6",
+    "vue-cli-plugin-cypress-experimental": "~1.2.0",
     "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.11.1"
+    "webpack": "^5.28.0"
   },
   "eslintConfig": {
     "extends": "@nuxtjs/eslint-config-typescript"
