--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "scripts": {
     "ci": "rm -fr node_modules && rm -rf 'public/*' && yarn install --frozen-lockfile",
-    "ci:build": "yarn ci && sh ./cli-process-env.sh \"$NETWORK\" && yarn generate --fail-on-error",
+    "ci:build": "yarn run ci && sh ./cli-process-env.sh \"$NETWORK\" && yarn generate --fail-on-error",
     "start:firebase": "firebase serve --only hosting",
     "deploy:prod": "./cli-deploy-production.sh",
     "dev": "sh cli-process-env.sh 'rinkeby' 'dev' && nuxt",
@@ -61,7 +61,7 @@
     "generate": "nuxt generate",
     "test": "jest",
     "format": "prettier --write",
-    "lint-ts": "eslint --fix \"**/*.{ts, js, vue}\"",
+    "lint-ts": "eslint --fix --ext \"**/*.{ts, js, vue}\"",
     "lint-css": "stylelint --fix \"**/*.scss\"",
     "cypress": "./node_modules/.bin/cypress open"
   },
