--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "lib": [
       "ESNext",
       "ESNext.AsyncIterable",
-      "DOM"
+      "DOM",
+      "dom"
     ],
     "esModuleInterop": true,
     "allowJs": true,
