--- a/package.json
+++ b/package.json
@@ -108,9 +108,9 @@
     "@babel/preset-env": "^7.13.12",
     "@babel/runtime": "^7.13.10",
     "@ethersproject/logger": "^5.1.0",
-    "@nuxt/typescript-runtime": "^2.1.0",
     "@inkline/nuxt": "^2.3.6",
     "@matterlabs/zk-wallet-onboarding": "1.18.6",
+    "@nuxt/typescript-runtime": "^2.1.0",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/pwa": "^3.3.5",
@@ -126,6 +126,7 @@
     "moment": "^2.29.1",
     "nuxt": "^2.15.4",
     "nuxt-i18n": "^6.22.3",
+    "nuxt-typed-vuex": "^0.1.22",
     "nuxt-webfontloader": "^1.1.0",
     "qrcode": "^1.4.4",
     "vue": "^2.6.12",
