--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "@ethersproject/logger": "^5.1.0",
     "@inkline/nuxt": "^2.3.6",
     "@matterlabs/zk-wallet-onboarding": "1.18.6",
+    "@nuxt/typescript": "^2.8.1",
     "@nuxt/typescript-runtime": "^2.1.0",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/google-gtag": "^1.0.4",
@@ -124,12 +125,13 @@
     "js-cookie": "^2.2.1",
     "lottie-web": "^5.7.7",
     "moment": "^2.29.1",
-    "nuxt": "^2.15.4",
+    "nuxt": "latest",
     "nuxt-i18n": "^6.22.3",
     "nuxt-typed-vuex": "^0.1.22",
     "nuxt-webfontloader": "^1.1.0",
     "qrcode": "^1.4.4",
     "vue": "^2.6.12",
+    "vue-class-component": "^7.2.5",
     "vue-property-decorator": "^9.1.2",
     "vue-qrcode": "^0.3.5",
     "vue-scrollto": "^2.20.0",
@@ -138,8 +140,8 @@
     "zksync": "^0.10.8"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.15.4",
-    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxt/types": "latest",
+    "@nuxt/typescript-build": "latest",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/style-resources": "^1.0.0",
@@ -165,6 +167,7 @@
     "jest": "^26.6.3",
     "lodash": "4.17.21",
     "node-sass": "latest",
+    "nuxt-typed-vuex": "latest",
     "postcss": "8.2.9",
     "postcss-loader": "4.2.0",
     "prettier": "^2.2.1",
@@ -180,6 +183,7 @@
     "typescript": "^4.2.3",
     "vue-class-component": "^7.2.6",
     "vue-jest": "^3.0.7",
+    "vue-property-decorator": "9.0.0",
     "vue-template-compiler": "^2.6.12",
     "vuex": "^3.6.2",
     "webpack": "^4.46.0"
