refactor(Src): Type-errors fixing
Fixing left type-errors

--- a/package.json
+++ b/package.json
@@ -62,8 +62,7 @@
     "test": "jest",
     "format": "prettier --write",
     "lint-ts": "eslint --fix --ext \"**/*.{ts, js, vue}\"",
-    "lint-css": "stylelint --fix \"**/*.scss\"",
-    "cypress": "./node_modules/.bin/cypress open"
+    "lint-css": "stylelint --fix \"**/*.scss\""
   },
   "stylelint": {
     "extends": [
@@ -110,7 +109,6 @@
     "@ethersproject/logger": "^5.1.0",
     "@inkline/nuxt": "^2.3.6",
     "@matterlabs/zk-wallet-onboarding": "1.18.6",
-    "@nuxt/typescript": "^2.8.1",
     "@nuxt/typescript-runtime": "^2.1.0",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/google-gtag": "^1.0.4",
@@ -125,13 +123,12 @@
     "js-cookie": "^2.2.1",
     "lottie-web": "^5.7.7",
     "moment": "^2.29.1",
-    "nuxt": "latest",
+    "nuxt": "^2.15.4",
     "nuxt-i18n": "^6.22.3",
     "nuxt-typed-vuex": "^0.1.22",
     "nuxt-webfontloader": "^1.1.0",
     "qrcode": "^1.4.4",
     "vue": "^2.6.12",
-    "vue-class-component": "^7.2.5",
     "vue-property-decorator": "^9.1.2",
     "vue-qrcode": "^0.3.5",
     "vue-scrollto": "^2.20.0",
@@ -140,8 +137,8 @@
     "zksync": "^0.10.8"
   },
   "devDependencies": {
-    "@nuxt/types": "latest",
-    "@nuxt/typescript-build": "latest",
+    "@nuxt/types": "^2.15.4",
+    "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/style-resources": "^1.0.0",
@@ -152,14 +149,11 @@
     "@vue/test-utils": "^1.1.3",
     "babel-core": "^7.0.0-bridge.0",
     "commitlint": "^12.0.1",
-    "cypress": "^6.8.0",
-    "cypress-nuxt": "^1.3.1",
-    "cypress-vue-unit-test": "^3.5.1",
+    "cypress": "^7.0.0",
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-prettier": "latest",
     "eslint-plugin-prettier-vue": "^2.1.1",
     "eslint-plugin-vue": "^7.8.0",
@@ -167,7 +161,6 @@
     "jest": "^26.6.3",
     "lodash": "4.17.21",
     "node-sass": "latest",
-    "nuxt-typed-vuex": "latest",
     "postcss": "8.2.9",
     "postcss-loader": "4.2.0",
     "prettier": "^2.2.1",
@@ -183,7 +176,6 @@
     "typescript": "^4.2.3",
     "vue-class-component": "^7.2.6",
     "vue-jest": "^3.0.7",
-    "vue-property-decorator": "9.0.0",
     "vue-template-compiler": "^2.6.12",
     "vuex": "^3.6.2",
     "webpack": "^4.46.0"
