perf(CI tuning): Preparation for demo
— removed couple of more @ts-ignore
— dependencies upgraded
— CI-tuning / flow tunin

--- a/package.json
+++ b/package.json
@@ -132,8 +132,8 @@
     "vue-property-decorator": "^9.1.2",
     "vue-qrcode": "^0.3.5",
     "vue-scrollto": "^2.20.0",
-    "walletlink": "^2.0.2",
-    "web3": "^1.3.4",
+    "walletlink": "^2.0.3",
+    "web3": "^1.3.5",
     "zksync": "^0.10.8"
   },
   "devDependencies": {
@@ -144,11 +144,11 @@
     "@nuxtjs/style-resources": "^1.0.0",
     "@rsksmart/mock-web3-provider": "^0.0.1",
     "@types/jest": "^26.0.22",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
     "@vue/test-utils": "^1.1.3",
-    "babel-core": "^7.0.0-bridge.0",
-    "commitlint": "^12.0.1",
+    "babel-core": "^6.26.3",
+    "commitlint": "^12.1.1",
     "cypress": "^7.0.0",
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
@@ -162,23 +162,23 @@
     "lodash": "4.17.21",
     "node-sass": "latest",
     "postcss": "8.2.9",
-    "postcss-loader": "4.2.0",
+    "postcss-loader": "5.2.0",
     "prettier": "^2.2.1",
-    "sass-loader": "^10.0.0",
+    "sass-loader": "^11.0.1",
     "stylelint": "^13.12.0",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended": "^4.0.0",
     "stylelint-high-performance-animation": "^1.5.2",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3",
     "vue-class-component": "^7.2.6",
     "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.12",
     "vuex": "^3.6.2",
-    "webpack": "^4.46.0"
+    "webpack": "^5.30.0"
   },
   "eslintConfig": {
     "extends": "@nuxtjs/eslint-config-typescript"
