--- a/.github/workflows/firebase-hosting-push-dev.yml
+++ b/.github/workflows/firebase-hosting-push-dev.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: yarn install --check-cache && yarn run ci
+        run: yarn install --check-cache
 
       - name: Configure for rinkeby
         run: sh ./cli-process-env.sh rinkeby dev 1
