--- a/.github/workflows/firebase-hosting-push-dev.yml
+++ b/.github/workflows/firebase-hosting-push-dev.yml
@@ -6,7 +6,7 @@ name: Deploy to rinkeby, ropsten and mainnet DEV on PR
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
-    environment: dev
+    environment: test
     steps:
       - uses: actions/checkout@v2
 
