ci(Firebase / cli / toolset): Polishing the CI / cli / toolset
— re-configured firebase to have and use "dev" channel
— dropped redundant yarn release
— added cli-dev for dev tasks autimation
— re-configured packages.json
— preparing for the tests

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ public
 !public/.gitignore
 !.yarn/releases/*
 !.yarn/plugins/*
+/cypress/screenshots/examples/misc.spec.js/
+/cypress/videos/examples/
