--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,6 +1,9 @@
 nodeLinker: node-modules
 
 packageExtensions:
+  "jest@*":
+    peerDependencies:
+      "@babel/core": "*"
   "@nuxt/typescript-build@*":
     peerDependencies:
       webpack: "*"
@@ -21,6 +24,8 @@ packageExtensions:
       webpack: "*"
       "@cypress/webpack-preprocessor": "*"
   "@cypress/vue@*":
+    dependencies:
+      vue: "*"
     peerDependencies:
       "@vue/test-utils": "*"
       vue-template-compiler: "*"
