--- a/.github/workflows/firebase-hosting-push-dev.yml
+++ b/.github/workflows/firebase-hosting-push-dev.yml
@@ -25,8 +25,7 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
           target: rinkeby-dev
           projectId: zksync-vue
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
+          channelID: dev
 
       - name: Configure for ropsten
         run: sh ./cli-process-env.sh ropsten dev 1
@@ -40,8 +39,7 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
           target: ropsten-dev
           projectId: zksync-vue
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
+          channelID: dev
 
       - name: Configure for mainnet [dev]
         run: sh ./cli-process-env.sh mainnet dev 1
@@ -53,7 +51,6 @@ jobs:
         uses: matter-labs/action-hosting-deploy@v0
         with:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
-          target: mainnet-dev
+          target: stage-dev
           projectId: zksync-vue
-        env:
-          FIREBASE_CLI_PREVIEWS: hostingchannels
+          channelID: dev
