--- a/firebase.json
+++ b/firebase.json
@@ -19,6 +19,15 @@
       ]
     },
     {
+      "target": "rinkeby-dev",
+      "public": "public",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ]
+    },
+    {
       "target": "ropsten",
       "public": "public",
       "ignore": [
@@ -28,7 +37,25 @@
       ]
     },
     {
+      "target": "ropsten-dev",
+      "public": "public",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ]
+    },
+    {
       "target": "mainnet",
+      "public": "public",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ]
+    },
+    {
+      "target": "mainnet-dev",
       "public": "public",
       "ignore": [
         "firebase.json",
