perf(Polishing for the release): Couple of refactoring a-like changes, CI update to launch on mainnet

--- a/.github/workflows/firebase-hosting-push-dev.yml
+++ b/.github/workflows/firebase-hosting-push-dev.yml
@@ -51,6 +51,6 @@ jobs:
         uses: matter-labs/action-hosting-deploy@v0
         with:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ZKSYNC_VUE }}'
-          target: stage-dev
+          target: mainnet-dev
           projectId: zksync-vue
           channelID: dev
